2010-06-06  Michael Hutchinson  <mhutchinson@novell.com>

	* IPhoneBuildExtension.cs: Moved lots of re-usable code from
	  iphone build extension to new
	  MonoDevelop.MacDev.MacBuildUtilities class.

2010-06-05  Michael Hutchinson  <mhutchinson@novell.com>

	* IPhoneProjectConfiguration.cs: Fix possible exception.

	* MonoDevelop.IPhone.csproj: Remove duplicate/nonexistent
	  folders.

2010-06-04  Michael Hutchinson  <mhutchinson@novell.com>

	* icons:
	* Icons:
	* templates:
	* Templates:
	* Icons/16x16:
	* icons/22x22:
	* icons/32x32:
	* Icons/22x22:
	* Icons/48x48:
	* Icons/32x32:
	* icons/48x48:
	* Icons/24x24:
	* icons/24x24:
	* icons/16x16:
	* PropertyList:
	* Icons/256x256:
	* icons/256x256:
	* CodeBehind.cs:
	* Orientation.cs:
	* IPhoneProject.cs:
	* InterfaceBuilder:
	* MobileProvision.cs:
	* Icons/mono-develop.svg:
	* icons/mono-develop.svg:
	* CodeBehindGenerator.cs:
	* IPhoneBuildExtension.cs:
	* PropertyList/PlistData.cs:
	* MonoDevelop.IPhone.csproj:
	* PropertyList/PlistReal.cs:
	* Gui/IPhoneOptionsPanel.cs:
	* PropertyList/PlistDate.cs:
	* PropertyList/PlistArray.cs:
	* PropertyList/PlistString.cs:
	* PropertyList/PlistObject.cs:
	* MonoDevelop.IPhone.addin.xml:
	* Icons/phone-apple-iphone.svg:
	* InterfaceBuilder/IBObject.cs:
	* PropertyList/PlistInteger.cs:
	* PropertyList/PlistBoolean.cs:
	* templates/IPhonePList.xft.xml:
	* templates/IPadViewXib.xft.xml:
	* PropertyList/PlistDocument.cs:
	* Templates/IPadViewXib.xft.xml:
	* Templates/IPhonePList.xft.xml:
	* InterfaceBuilder/IBDocument.cs:
	* icons/phone-apple-iphone-32.png:
	* PropertyList/PlistDictionary.cs:
	* PropertyList/PlistObjectBase.cs:
	* icons/phone-apple-iphone-22.png:
	* InterfaceBuilder/IBReference.cs:
	* InterfaceBuilder/Collections.cs:
	* templates/IPhoneViewXib.xft.xml:
	* icons/phone-apple-iphone-24.png:
	* icons/phone-apple-iphone-48.png:
	* Templates/IPhoneViewXib.xft.xml:
	* icons/phone-apple-iphone-16.png:
	* icons/iphone-project-overlay.png: