@@ -1,3 +1,10 @@
+2010-06-07  Michael Hutchinson  <mhutchinson@novell.com>
+
+	* XibCodeBehind.cs:
+	* MacBuildUtilities.cs:
+	* MonoDevelop.MacDev.csproj: Move more sharable code from
+	  MonoDevelop.IPhone to MonoDevelop.MacDev.
+
 2010-06-06  Michael Hutchinson  <mhutchinson@novell.com>
 
 	* MacBuildUtilities.cs:
