@@ -1,3 +1,12 @@
+2010-06-07  Michael Hutchinson  <mhutchinson@novell.com>
+
+	* CodeBehind.cs:
+	* IPhoneProject.cs:
+	* CodeBehindGenerator.cs:
+	* IPhoneBuildExtension.cs:
+	* MonoDevelop.IPhone.csproj: Move more sharable code from
+	  MonoDevelop.IPhone to MonoDevelop.MacDev.
+
 2010-06-06  Michael Hutchinson  <mhutchinson@novell.com>
 
 	* IPhoneBuildExtension.cs: Moved lots of re-usable code from
